force-app/main/default/objects/Partner_Commission_Structure__c/Partner_Commission_Structure__c.object-meta.xml
<CustomObject>
    <label>Partner Commission Structure</label>
    <nameField>
        <displayFormat>PCS-{0000}</displayFormat>
        <label>Partner Commission Structure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Commission Structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>