force-app/main/default/objects/Partner_Commission_Structure__c/fields/Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Commission_Value__c</fullName>
    <label>Commission Value</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>