force-app/main/default/objects/Partner_Commission_Structure__c/fields/Dienst__c.field-meta.xml
<CustomField>
    <fullName>Dienst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dienst</label>
    <referenceTo>Dienstgebied__c</referenceTo>
    <relationshipLabel>Partner Commission Structures</relationshipLabel>
    <relationshipName>Partner_Commission_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>