force-app/main/default/objects/Partner_Commission_Structure__c/fields/Geldig_tot__c.field-meta.xml
<CustomField>
    <fullName>Geldig_tot__c</fullName>
    <label>Geldig tot</label>
    <type>Date</type>
</CustomField>