force-app/main/default/objects/Partner_Commission_Structure__c/fields/Geldig_van__c.field-meta.xml
<CustomField>
    <fullName>Geldig_van__c</fullName>
    <label>Geldig van</label>
    <type>Date</type>
</CustomField>