force-app/main/default/objects/Partner_Commission_Structure__c/fields/Notities__c.field-meta.xml
<CustomField>
    <fullName>Notities__c</fullName>
    <label>Notities</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>