force-app/main/default/objects/Partner_Commission_Structure__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Commission Structures</relationshipLabel>
    <relationshipName>Partner_Commission_Structures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>